Add the remaining settings

--- a/src/app/components/rest/rest.component.html
+++ b/src/app/components/rest/rest.component.html
@@ -47,7 +47,7 @@
 
           <hr class='accent-1 d-inline-block mx-auto'>
           <p class="card-text col-md-9 text-left">{{food.description}}</p>
-          <button type="button" name="" id="add" class="btn btn-white" (click) ="addItem({ id:food.id })"><a [routerLink]="['/foodcart', { id:food.id }]">Add</a></button>
+          <button type="button" name="" id="add" class="btn btn-white" ><a [routerLink]="['/foodcart', { id:food.id }]">Add</a></button>
           <!-- <button type="button" name="" id="add" class="btn btn-white">Remove</button> -->
         </div>
         <hr>
@@ -106,7 +106,7 @@
 
             <hr class='accent-1 d-inline-block mx-auto'>
             <p class="card-text col-md-9 text-left">{{review.review}}</p>
-            <button type="button" name="" id="add" class="btn btn-white">Delete</button>
+            <!-- <button type="button" name="" id="add" class="btn btn-white">Delete</button> -->
           </div>
           <hr>
       </div>
@@ -116,9 +116,9 @@
 
   <!--Beginning of Recipe-->
 <div  *ngIf = "hideMR2" class="container jumbotron menu recipe-stuff">
-    <h4>{{recipe.recipeName}}</h4>
+    <!-- <h4>{{recipe.recipeName}}</h4>
     <hr>
-    <p>{{recipe.description}}</p>
+    <p>{{recipe.description}}</p> -->
 </div>
   <!--End of Recipe-->
 
