--- a/src/app/components/restaurants/restaurants.component.html
+++ b/src/app/components/restaurants/restaurants.component.html
@@ -1,18 +1,18 @@
 <main>
     <section class="welcomeArea">
-  
+
         <section class="jumbotron jumbotron-fluid text-center d-flex align-items-center">
             <div class="container header align-middle">
               <h1 class="jumbotron-heading">Foodiez App</h1>
-              <p class="lead">ORDER FROM THE BEST RESTAURANTS IN {{location-title}}</p>
+              <p class="lead">ORDER FROM THE BEST RESTAURANTS IN </p>
             </div>
         </section>
-  
+
       <div class="container-fluid">
-  
+
         <div class="moreHeader row">
           <div col-sm-6>
-            <h2> Highest Rated in {{location-title}} </h2>
+            <h2> Highest Rated in  </h2>
           </div>
         </div>
         <hr>
